--- a/Aplicacao de Algoritmos.ipynb
+++ b/Aplicacao de Algoritmos.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 219,
+   "execution_count": 284,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,6 +14,7 @@
     "from sklearn.neural_network import MLPClassifier\n",
     "from sklearn.metrics import confusion_matrix, classification_report\n",
     "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.model_selection import KFold\n",
     "import tensorflow as tf\n",
     "from tensorflow.keras.models import Sequential\n",
     "from tensorflow.keras.layers import Dense\n",
@@ -1708,6 +1709,134 @@
    "source": [
     "# Exibir as primeiras linhas do novo DataFrame feito a partir das variáveis de entrada mais correlatadas com as variáveis de saída\n",
     "df_high_corr.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "DataFrames criados até aqui:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "df_pca - Componentes principais\n",
+    "df_selected - Variaveis com maior correlacao com a Primeira Componente Principal\n",
+    "df_spearman - Remoção das variáveis mais correlatadas\n",
+    "df_high_corr - Variaveis de entrada com maior correlação com as variáveis de saída"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Aplicando a seleção de Dados por k-fold"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 283,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Selecionando o dataframe\n",
+    "\n",
+    "df_kfold = df_pca.copy()\n",
+    "#df_kfold = df_selected.copy()\n",
+    "#df_kfold = df_spearman.copy()\n",
+    "#df_kfold = df_high_corr.copy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 289,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Separando as variáveis objetivo\n",
+    "X = df_kfold.drop('CLASSE', axis=1)\n",
+    "y = df_kfold['CLASSE']\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 285,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Definindo o número de folds\n",
+    "\n",
+    "num_folds = 7\n",
+    "sub_num_folds = 7"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 286,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Configurar o k-Fold Principal\n",
+    "\n",
+    "kf = KFold(n_splits=num_folds, shuffle=True, random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 298,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Dividir os Dados para o k-fold teste\n",
+    "\n",
+    "fold_indices = list(kf.split(X, y))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 291,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Sub-K-Fold para Treino e Validação\n",
+    "\n",
+    "sub_kf = KFold(n_splits=sub_num_folds, shuffle=True, random_state=42)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 299,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Iterar sobre cada fold principal\n",
+    "for fold, (train_index, test_index) in enumerate(fold_indices):\n",
+    "    # Dados de treino e teste para o fold principal\n",
+    "    X_train, X_test = X.iloc[train_index], X.iloc[test_index]\n",
+    "    y_train, y_test = y.iloc[train_index], y.iloc[test_index]\n",
+    "    \n",
+    "    # Aplicar o sub-k-fold para treino e validação\n",
+    "    sub_kf = KFold(n_splits=sub_num_folds, shuffle=True, random_state=42)\n",
+    "    \n",
+    "    # Armazenar os índices dos folds secundários\n",
+    "    sub_fold_indices = list(sub_kf.split(X_train, y_train))\n",
+    "    \n",
+    "    for sub_fold, (sub_train_index, sub_val_index) in enumerate(sub_fold_indices):\n",
+    "        # Dados de treino e validação para o sub-k-fold\n",
+    "        X_sub_train, X_sub_val = X_train.iloc[sub_train_index], X_train.iloc[sub_val_index]\n",
+    "        y_sub_train, y_sub_val = y_train.iloc[sub_train_index], y_train.iloc[sub_val_index]\n",
+    "        \n",
+    "        # Aqui você pode treinar e validar seu modelo\n",
+    "        # Exemplo: print(f'Fold {fold + 1}, Sub-Fold {sub_fold + 1}')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Aplicando as redes neurais no k-fold"
    ]
   }
  ],
