Preparando para gerar os resultados

--- a/Redes Neurais no PCA.ipynb
+++ b/Redes Neurais no PCA.ipynb
@@ -47,7 +47,7 @@
     "# Função para criar o modelo de rede neural\n",
     "def create_model(input_shape, num_classes):\n",
     "    model = Sequential([\n",
-    "        Dense(12, activation='relu', input_shape=(input_shape,)),\n",
+    "        Dense(0, activation='relu', input_shape=(input_shape,)),\n",
     "        Dense(num_classes, activation='softmax')\n",
     "    ])\n",
     "    model.compile(optimizer='adam', loss='sparse_categorical_crossentropy', metrics=['accuracy'])\n",
@@ -180,9 +180,240 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fold 1\n",
+      "Distribuição no treino: Counter({'C1': 251, 'C2': 224, 'B2': 214, 'DE': 151, 'B1': 65, 'A': 34})\n",
+      "Distribuição no teste: Counter({'C1': 42, 'C2': 38, 'B2': 36, 'DE': 25, 'B1': 10, 'A': 6})\n",
+      "\n",
+      "  Subfold 1\n",
+      "  Distribuição no treino: Counter({'C1': 215, 'C2': 192, 'B2': 183, 'DE': 130, 'B1': 55, 'A': 29})\n",
+      "  Distribuição na validação: Counter({'C1': 36, 'C2': 32, 'B2': 31, 'DE': 21, 'B1': 10, 'A': 5})\n",
+      "\n",
+      "  Subfold 2\n",
+      "  Distribuição no treino: Counter({'C1': 215, 'C2': 192, 'B2': 183, 'DE': 130, 'B1': 55, 'A': 30})\n",
+      "  Distribuição na validação: Counter({'C1': 36, 'C2': 32, 'B2': 31, 'DE': 21, 'B1': 10, 'A': 4})\n",
+      "\n",
+      "  Subfold 3\n",
+      "  Distribuição no treino: Counter({'C1': 215, 'C2': 192, 'B2': 183, 'DE': 130, 'B1': 56, 'A': 29})\n",
+      "  Distribuição na validação: Counter({'C1': 36, 'C2': 32, 'B2': 31, 'DE': 21, 'B1': 9, 'A': 5})\n",
+      "\n",
+      "  Subfold 4\n",
+      "  Distribuição no treino: Counter({'C1': 215, 'C2': 192, 'B2': 184, 'DE': 129, 'B1': 56, 'A': 29})\n",
+      "  Distribuição na validação: Counter({'C1': 36, 'C2': 32, 'B2': 30, 'DE': 22, 'B1': 9, 'A': 5})\n",
+      "\n",
+      "  Subfold 5\n",
+      "  Distribuição no treino: Counter({'C1': 215, 'C2': 192, 'B2': 184, 'DE': 129, 'B1': 56, 'A': 29})\n",
+      "  Distribuição na validação: Counter({'C1': 36, 'C2': 32, 'B2': 30, 'DE': 22, 'B1': 9, 'A': 5})\n",
+      "\n",
+      "  Subfold 6\n",
+      "  Distribuição no treino: Counter({'C1': 215, 'C2': 192, 'B2': 184, 'DE': 129, 'B1': 56, 'A': 29})\n",
+      "  Distribuição na validação: Counter({'C1': 36, 'C2': 32, 'B2': 30, 'DE': 22, 'B1': 9, 'A': 5})\n",
+      "\n",
+      "  Subfold 7\n",
+      "  Distribuição no treino: Counter({'C1': 216, 'C2': 192, 'B2': 183, 'DE': 129, 'B1': 56, 'A': 29})\n",
+      "  Distribuição na validação: Counter({'C1': 35, 'C2': 32, 'B2': 31, 'DE': 22, 'B1': 9, 'A': 5})\n",
+      "\n",
+      "Fold 2\n",
+      "Distribuição no treino: Counter({'C1': 251, 'C2': 224, 'B2': 215, 'DE': 151, 'B1': 64, 'A': 34})\n",
+      "Distribuição no teste: Counter({'C1': 42, 'C2': 38, 'B2': 35, 'DE': 25, 'B1': 11, 'A': 6})\n",
+      "\n",
+      "  Subfold 1\n",
+      "  Distribuição no treino: Counter({'C1': 215, 'C2': 192, 'B2': 184, 'DE': 129, 'B1': 55, 'A': 29})\n",
+      "  Distribuição na validação: Counter({'C1': 36, 'C2': 32, 'B2': 31, 'DE': 22, 'B1': 9, 'A': 5})\n",
+      "\n",
+      "  Subfold 2\n",
+      "  Distribuição no treino: Counter({'C1': 215, 'C2': 192, 'B2': 185, 'DE': 129, 'B1': 54, 'A': 30})\n",
+      "  Distribuição na validação: Counter({'C1': 36, 'C2': 32, 'B2': 30, 'DE': 22, 'B1': 10, 'A': 4})\n",
+      "\n",
+      "  Subfold 3\n",
+      "  Distribuição no treino: Counter({'C1': 215, 'C2': 192, 'B2': 185, 'DE': 129, 'B1': 55, 'A': 29})\n",
+      "  Distribuição na validação: Counter({'C1': 36, 'C2': 32, 'B2': 30, 'DE': 22, 'B1': 9, 'A': 5})\n",
+      "\n",
+      "  Subfold 4\n",
+      "  Distribuição no treino: Counter({'C1': 215, 'C2': 192, 'B2': 184, 'DE': 130, 'B1': 55, 'A': 29})\n",
+      "  Distribuição na validação: Counter({'C1': 36, 'C2': 32, 'B2': 31, 'DE': 21, 'B1': 9, 'A': 5})\n",
+      "\n",
+      "  Subfold 5\n",
+      "  Distribuição no treino: Counter({'C1': 215, 'C2': 192, 'B2': 184, 'DE': 130, 'B1': 55, 'A': 29})\n",
+      "  Distribuição na validação: Counter({'C1': 36, 'C2': 32, 'B2': 31, 'DE': 21, 'B1': 9, 'A': 5})\n",
+      "\n",
+      "  Subfold 6\n",
+      "  Distribuição no treino: Counter({'C1': 215, 'C2': 192, 'B2': 184, 'DE': 130, 'B1': 55, 'A': 29})\n",
+      "  Distribuição na validação: Counter({'C1': 36, 'C2': 32, 'B2': 31, 'DE': 21, 'B1': 9, 'A': 5})\n",
+      "\n",
+      "  Subfold 7\n",
+      "  Distribuição no treino: Counter({'C1': 216, 'C2': 192, 'B2': 184, 'DE': 129, 'B1': 55, 'A': 29})\n",
+      "  Distribuição na validação: Counter({'C1': 35, 'C2': 32, 'B2': 31, 'DE': 22, 'B1': 9, 'A': 5})\n",
+      "\n",
+      "Fold 3\n",
+      "Distribuição no treino: Counter({'C1': 251, 'C2': 225, 'B2': 215, 'DE': 150, 'B1': 64, 'A': 34})\n",
+      "Distribuição no teste: Counter({'C1': 42, 'C2': 37, 'B2': 35, 'DE': 26, 'B1': 11, 'A': 6})\n",
+      "\n",
+      "  Subfold 1\n",
+      "  Distribuição no treino: Counter({'C1': 215, 'C2': 192, 'B2': 184, 'DE': 129, 'B1': 55, 'A': 29})\n",
+      "  Distribuição na validação: Counter({'C1': 36, 'C2': 33, 'B2': 31, 'DE': 21, 'B1': 9, 'A': 5})\n",
+      "\n",
+      "  Subfold 2\n",
+      "  Distribuição no treino: Counter({'C1': 216, 'C2': 193, 'B2': 184, 'DE': 128, 'B1': 54, 'A': 30})\n",
+      "  Distribuição na validação: Counter({'C1': 35, 'C2': 32, 'B2': 31, 'DE': 22, 'B1': 10, 'A': 4})\n",
+      "\n",
+      "  Subfold 3\n",
+      "  Distribuição no treino: Counter({'C1': 215, 'C2': 193, 'B2': 185, 'DE': 128, 'B1': 55, 'A': 29})\n",
+      "  Distribuição na validação: Counter({'C1': 36, 'C2': 32, 'B2': 30, 'DE': 22, 'B1': 9, 'A': 5})\n",
+      "\n",
+      "  Subfold 4\n",
+      "  Distribuição no treino: Counter({'C1': 215, 'C2': 193, 'B2': 185, 'DE': 128, 'B1': 55, 'A': 29})\n",
+      "  Distribuição na validação: Counter({'C1': 36, 'C2': 32, 'B2': 30, 'DE': 22, 'B1': 9, 'A': 5})\n",
+      "\n",
+      "  Subfold 5\n",
+      "  Distribuição no treino: Counter({'C1': 215, 'C2': 193, 'B2': 184, 'DE': 129, 'B1': 55, 'A': 29})\n",
+      "  Distribuição na validação: Counter({'C1': 36, 'C2': 32, 'B2': 31, 'DE': 21, 'B1': 9, 'A': 5})\n",
+      "\n",
+      "  Subfold 6\n",
+      "  Distribuição no treino: Counter({'C1': 215, 'C2': 193, 'B2': 184, 'DE': 129, 'B1': 55, 'A': 29})\n",
+      "  Distribuição na validação: Counter({'C1': 36, 'C2': 32, 'B2': 31, 'DE': 21, 'B1': 9, 'A': 5})\n",
+      "\n",
+      "  Subfold 7\n",
+      "  Distribuição no treino: Counter({'C1': 215, 'C2': 193, 'B2': 184, 'DE': 129, 'B1': 55, 'A': 29})\n",
+      "  Distribuição na validação: Counter({'C1': 36, 'C2': 32, 'B2': 31, 'DE': 21, 'B1': 9, 'A': 5})\n",
+      "\n",
+      "Fold 4\n",
+      "Distribuição no treino: Counter({'C1': 251, 'C2': 225, 'B2': 214, 'DE': 151, 'B1': 64, 'A': 34})\n",
+      "Distribuição no teste: Counter({'C1': 42, 'C2': 37, 'B2': 36, 'DE': 25, 'B1': 11, 'A': 6})\n",
+      "\n",
+      "  Subfold 1\n",
+      "  Distribuição no treino: Counter({'C1': 215, 'C2': 192, 'B2': 184, 'DE': 129, 'B1': 55, 'A': 29})\n",
+      "  Distribuição na validação: Counter({'C1': 36, 'C2': 33, 'B2': 30, 'DE': 22, 'B1': 9, 'A': 5})\n",
+      "\n",
+      "  Subfold 2\n",
+      "  Distribuição no treino: Counter({'C1': 215, 'C2': 193, 'B2': 184, 'DE': 129, 'B1': 54, 'A': 30})\n",
+      "  Distribuição na validação: Counter({'C1': 36, 'C2': 32, 'B2': 30, 'DE': 22, 'B1': 10, 'A': 4})\n",
+      "\n",
+      "  Subfold 3\n",
+      "  Distribuição no treino: Counter({'C1': 215, 'C2': 193, 'B2': 184, 'DE': 129, 'B1': 55, 'A': 29})\n",
+      "  Distribuição na validação: Counter({'C1': 36, 'C2': 32, 'B2': 30, 'DE': 22, 'B1': 9, 'A': 5})\n",
+      "\n",
+      "  Subfold 4\n",
+      "  Distribuição no treino: Counter({'C1': 215, 'C2': 193, 'B2': 183, 'DE': 130, 'B1': 55, 'A': 29})\n",
+      "  Distribuição na validação: Counter({'C1': 36, 'C2': 32, 'B2': 31, 'DE': 21, 'B1': 9, 'A': 5})\n",
+      "\n",
+      "  Subfold 5\n",
+      "  Distribuição no treino: Counter({'C1': 215, 'C2': 193, 'B2': 183, 'DE': 130, 'B1': 55, 'A': 29})\n",
+      "  Distribuição na validação: Counter({'C1': 36, 'C2': 32, 'B2': 31, 'DE': 21, 'B1': 9, 'A': 5})\n",
+      "\n",
+      "  Subfold 6\n",
+      "  Distribuição no treino: Counter({'C1': 215, 'C2': 193, 'B2': 183, 'DE': 130, 'B1': 55, 'A': 29})\n",
+      "  Distribuição na validação: Counter({'C1': 36, 'C2': 32, 'B2': 31, 'DE': 21, 'B1': 9, 'A': 5})\n",
+      "\n",
+      "  Subfold 7\n",
+      "  Distribuição no treino: Counter({'C1': 216, 'C2': 193, 'B2': 183, 'DE': 129, 'B1': 55, 'A': 29})\n",
+      "  Distribuição na validação: Counter({'C1': 35, 'C2': 32, 'B2': 31, 'DE': 22, 'B1': 9, 'A': 5})\n",
+      "\n",
+      "Fold 5\n",
+      "Distribuição no treino: Counter({'C1': 251, 'C2': 225, 'B2': 214, 'DE': 151, 'B1': 64, 'A': 35})\n",
+      "Distribuição no teste: Counter({'C1': 42, 'C2': 37, 'B2': 36, 'DE': 25, 'B1': 11, 'A': 5})\n",
+      "\n",
+      "  Subfold 1\n",
+      "  Distribuição no treino: Counter({'C1': 215, 'C2': 193, 'B2': 183, 'DE': 129, 'B1': 55, 'A': 30})\n",
+      "  Distribuição na validação: Counter({'C1': 36, 'C2': 32, 'B2': 31, 'DE': 22, 'B1': 9, 'A': 5})\n",
+      "\n",
+      "  Subfold 2\n",
+      "  Distribuição no treino: Counter({'C1': 215, 'C2': 193, 'B2': 184, 'DE': 129, 'B1': 54, 'A': 30})\n",
+      "  Distribuição na validação: Counter({'C1': 36, 'C2': 32, 'B2': 30, 'DE': 22, 'B1': 10, 'A': 5})\n",
+      "\n",
+      "  Subfold 3\n",
+      "  Distribuição no treino: Counter({'C1': 215, 'C2': 193, 'B2': 184, 'DE': 129, 'B1': 55, 'A': 30})\n",
+      "  Distribuição na validação: Counter({'C1': 36, 'C2': 32, 'B2': 30, 'DE': 22, 'B1': 9, 'A': 5})\n",
+      "\n",
+      "  Subfold 4\n",
+      "  Distribuição no treino: Counter({'C1': 215, 'C2': 193, 'B2': 184, 'DE': 129, 'B1': 55, 'A': 30})\n",
+      "  Distribuição na validação: Counter({'C1': 36, 'C2': 32, 'B2': 30, 'DE': 22, 'B1': 9, 'A': 5})\n",
+      "\n",
+      "  Subfold 5\n",
+      "  Distribuição no treino: Counter({'C1': 215, 'C2': 193, 'B2': 183, 'DE': 130, 'B1': 55, 'A': 30})\n",
+      "  Distribuição na validação: Counter({'C1': 36, 'C2': 32, 'B2': 31, 'DE': 21, 'B1': 9, 'A': 5})\n",
+      "\n",
+      "  Subfold 6\n",
+      "  Distribuição no treino: Counter({'C1': 215, 'C2': 193, 'B2': 183, 'DE': 130, 'B1': 55, 'A': 30})\n",
+      "  Distribuição na validação: Counter({'C1': 36, 'C2': 32, 'B2': 31, 'DE': 21, 'B1': 9, 'A': 5})\n",
+      "\n",
+      "  Subfold 7\n",
+      "  Distribuição no treino: Counter({'C1': 216, 'C2': 192, 'B2': 183, 'DE': 130, 'B1': 55, 'A': 30})\n",
+      "  Distribuição na validação: Counter({'C1': 35, 'C2': 33, 'B2': 31, 'DE': 21, 'B1': 9, 'A': 5})\n",
+      "\n",
+      "Fold 6\n",
+      "Distribuição no treino: Counter({'C1': 251, 'C2': 225, 'B2': 214, 'DE': 151, 'B1': 64, 'A': 35})\n",
+      "Distribuição no teste: Counter({'C1': 42, 'C2': 37, 'B2': 36, 'DE': 25, 'B1': 11, 'A': 5})\n",
+      "\n",
+      "  Subfold 1\n",
+      "  Distribuição no treino: Counter({'C1': 215, 'C2': 193, 'B2': 183, 'DE': 129, 'B1': 55, 'A': 30})\n",
+      "  Distribuição na validação: Counter({'C1': 36, 'C2': 32, 'B2': 31, 'DE': 22, 'B1': 9, 'A': 5})\n",
+      "\n",
+      "  Subfold 2\n",
+      "  Distribuição no treino: Counter({'C1': 215, 'C2': 193, 'B2': 184, 'DE': 129, 'B1': 54, 'A': 30})\n",
+      "  Distribuição na validação: Counter({'C1': 36, 'C2': 32, 'B2': 30, 'DE': 22, 'B1': 10, 'A': 5})\n",
+      "\n",
+      "  Subfold 3\n",
+      "  Distribuição no treino: Counter({'C1': 215, 'C2': 193, 'B2': 184, 'DE': 129, 'B1': 55, 'A': 30})\n",
+      "  Distribuição na validação: Counter({'C1': 36, 'C2': 32, 'B2': 30, 'DE': 22, 'B1': 9, 'A': 5})\n",
+      "\n",
+      "  Subfold 4\n",
+      "  Distribuição no treino: Counter({'C1': 215, 'C2': 193, 'B2': 184, 'DE': 129, 'B1': 55, 'A': 30})\n",
+      "  Distribuição na validação: Counter({'C1': 36, 'C2': 32, 'B2': 30, 'DE': 22, 'B1': 9, 'A': 5})\n",
+      "\n",
+      "  Subfold 5\n",
+      "  Distribuição no treino: Counter({'C1': 215, 'C2': 193, 'B2': 183, 'DE': 130, 'B1': 55, 'A': 30})\n",
+      "  Distribuição na validação: Counter({'C1': 36, 'C2': 32, 'B2': 31, 'DE': 21, 'B1': 9, 'A': 5})\n",
+      "\n",
+      "  Subfold 6\n",
+      "  Distribuição no treino: Counter({'C1': 215, 'C2': 193, 'B2': 183, 'DE': 130, 'B1': 55, 'A': 30})\n",
+      "  Distribuição na validação: Counter({'C1': 36, 'C2': 32, 'B2': 31, 'DE': 21, 'B1': 9, 'A': 5})\n",
+      "\n",
+      "  Subfold 7\n",
+      "  Distribuição no treino: Counter({'C1': 216, 'C2': 192, 'B2': 183, 'DE': 130, 'B1': 55, 'A': 30})\n",
+      "  Distribuição na validação: Counter({'C1': 35, 'C2': 33, 'B2': 31, 'DE': 21, 'B1': 9, 'A': 5})\n",
+      "\n",
+      "Fold 7\n",
+      "Distribuição no treino: Counter({'C1': 252, 'C2': 224, 'B2': 214, 'DE': 151, 'B1': 65, 'A': 34})\n",
+      "Distribuição no teste: Counter({'C1': 41, 'C2': 38, 'B2': 36, 'DE': 25, 'B1': 10, 'A': 6})\n",
+      "\n",
+      "  Subfold 1\n",
+      "  Distribuição no treino: Counter({'C1': 216, 'C2': 192, 'B2': 183, 'DE': 129, 'B1': 56, 'A': 29})\n",
+      "  Distribuição na validação: Counter({'C1': 36, 'C2': 32, 'B2': 31, 'DE': 22, 'B1': 9, 'A': 5})\n",
+      "\n",
+      "  Subfold 2\n",
+      "  Distribuição no treino: Counter({'C1': 216, 'C2': 192, 'B2': 184, 'DE': 129, 'B1': 55, 'A': 29})\n",
+      "  Distribuição na validação: Counter({'C1': 36, 'C2': 32, 'B2': 30, 'DE': 22, 'B1': 10, 'A': 5})\n",
+      "\n",
+      "  Subfold 3\n",
+      "  Distribuição no treino: Counter({'C1': 216, 'C2': 192, 'B2': 184, 'DE': 129, 'B1': 55, 'A': 30})\n",
+      "  Distribuição na validação: Counter({'C1': 36, 'C2': 32, 'B2': 30, 'DE': 22, 'B1': 10, 'A': 4})\n",
+      "\n",
+      "  Subfold 4\n",
+      "  Distribuição no treino: Counter({'C1': 216, 'C2': 192, 'B2': 184, 'DE': 129, 'B1': 56, 'A': 29})\n",
+      "  Distribuição na validação: Counter({'C1': 36, 'C2': 32, 'B2': 30, 'DE': 22, 'B1': 9, 'A': 5})\n",
+      "\n",
+      "  Subfold 5\n",
+      "  Distribuição no treino: Counter({'C1': 216, 'C2': 192, 'B2': 183, 'DE': 130, 'B1': 56, 'A': 29})\n",
+      "  Distribuição na validação: Counter({'C1': 36, 'C2': 32, 'B2': 31, 'DE': 21, 'B1': 9, 'A': 5})\n",
+      "\n",
+      "  Subfold 6\n",
+      "  Distribuição no treino: Counter({'C1': 216, 'C2': 192, 'B2': 183, 'DE': 130, 'B1': 56, 'A': 29})\n",
+      "  Distribuição na validação: Counter({'C1': 36, 'C2': 32, 'B2': 31, 'DE': 21, 'B1': 9, 'A': 5})\n",
+      "\n",
+      "  Subfold 7\n",
+      "  Distribuição no treino: Counter({'C1': 216, 'C2': 192, 'B2': 183, 'DE': 130, 'B1': 56, 'A': 29})\n",
+      "  Distribuição na validação: Counter({'C1': 36, 'C2': 32, 'B2': 31, 'DE': 21, 'B1': 9, 'A': 5})\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# Aqui é só pra contar e ver a proporção dos Folds e Subfolds\n",
     "\n",
@@ -229,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -255,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -265,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -276,9 +507,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
+      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
+      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    }
+   ],
    "source": [
     "# Codificar os rótulos para garantir que estejam no intervalo esperado\n",
     "label_encoder = LabelEncoder()\n",
@@ -287,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -436,7 +679,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -456,7 +699,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -487,19 +730,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import statistics\n",
-    "\n",
-    "precisao_media_DE = statistics.mean(precisao_classe_C2)\n",
-    "print(precisao_media_DE)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -526,8 +757,10 @@
     "media_precisoes_classes = [sum(precisoes)/len(precisoes) for precisoes in precisoes_classes]\n",
     "\n",
     "# Exibir as médias de precisão de cada classe\n",
+    "vetor_classe = [\"A\", \"B1\", \"B2\", \"C1\", \"C2\", \"DE\"]\n",
     "for classe, media in enumerate(media_precisoes_classes):\n",
-    "    print(f\"Classe {classe+1}: Média de Precisão = {media:.4f}\")\n"
+    "    # print(f\"Classe {classe+1}: Média de Precisão = {media:.4f}\")\n",
+    "    print(f\"Classe {vetor_classe[classe]}: Média de Precisão = {media:.4f}\")\n"
    ]
   }
  ],
